<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dialog_background"
            android:padding="20dp"
            android:layout_marginHorizontal="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleText"
                android:text="@string/drug"
                android:textColor="@color/dark_text"
                android:gravity="center"
                android:layout_marginVertical="5dp"/>
            <ListView
                android:id="@+id/list_item"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/cancel"
                    style="@style/MyButton"
                    android:layout_weight="1"
                    android:background="@drawable/button_background" />
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/save"
                    style="@style/MyButton"
                    android:layout_weight="1"
                    android:background="@drawable/button_background" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>