<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_add"
                app:cardBackgroundColor="@color/dark_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_cancel"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dialog_background"
            android:padding="20dp"
            android:layout_marginHorizontal="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_drugstore"
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/edt_drugstore_name"
                    android:layout_alignBottom="@+id/edt_drugstore_name"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/drugstore_"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_drugstore_name"
                    style="@style/MyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txt_drugstore"/>

                <TextView
                    android:id="@+id/txt_address"
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_drugstore"
                    android:layout_alignTop="@+id/edt_address"
                    android:layout_alignEnd="@+id/txt_drugstore"
                    android:layout_alignBottom="@+id/edt_address"
                    android:gravity="center_vertical"
                    android:text="@string/address_"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_drugstore_name"
                    android:layout_marginTop="10dp"
                    android:layout_alignStart="@id/edt_drugstore_name"
                    style="@style/MyEditText"/>



            </RelativeLayout>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/save"
                style="@style/MyButton"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>